pc wireframe finished

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -7,17 +7,17 @@
 <!--SKILL ROWS-->
 <!-- TABS-->
 <!-- =============================-->
-<input class="type" name="attr_sheet_type" type="hidden" value="character, page1, page2"/>
+<input class="type" name="attr_sheet_type" type="hidden" value="character"/>
+<input class="display_string" name="attr_character_settings" type="hidden" value=""/>
 <!--TABS & LOGO-->
-<!-- =============================--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
+<!-- =============================-->
 <div class="tabs grid">
-  <!-- BUTTON TO TOGGLE ON GM WHISPER-->
+  <!-- Buttons to toggle on GM whisper-->
   <input class="whisper-toggle" name="attr_gm_toggle" type="hidden" value=" "/>
-  <button data-i18n-title="gm-whisper-toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span></button>
+  <button data-i18n-title="gm-whisper-toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span><span class="hidden">gm whisper toggle. current status:<span class="on">on</span><span class="off">off</span></span></button>
+  <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
-  <button data-i18n-title="sheet-page1" name="act_sheet_page1" title="page 1 toggle" type="action"> <span>page 1</span></button>
-  <button data-i18n-title="sheet-page2" name="act_sheet_page2" title="page 2 toggle" type="action"> <span>page 2</span></button>
-  <button data-i18n-title="sheet-settings" name="act_sheet_select" title="sheet settings" type="action"> <span class="pictos">y </span></button>
+  <button data-i18n-title="sheet-settings" name="act_sheet_select" title="sheet settings" type="action"> <span class="hidden">sheet settings toggle</span><span class="pictos">y </span></button>
 </div>
 <!-- NPC SHEET-->
 <!-- =============================-->
@@ -885,71 +885,56 @@
       </div>
       <div class="section-directions center border-bottom"><span>Body armor reduces the damage of all attacks except Called Shots and successful Lethality rolls.</span></div>
       <div class="grid section-weapons border-bottom">
-        <h2 title="16. weapons">16. weapons</h2>
+        <h2 class="center" title="16. weapons">16. weapons</h2>
         <div class="vert-line"></div>
-        <h2 title="skill %">skill %</h2>
+        <h2 class="center" title="skill %">skill %</h2>
         <div class="vert-line"></div>
-        <h2 title="base range">base range</h2>
+        <h2 class="center" title="base range">base range</h2>
         <div class="vert-line"></div>
-        <h2 title="damage">damage</h2>
+        <h2 class="center" title="damage">damage</h2>
         <div class="vert-line"></div>
-        <h2 title="armor piercing">armor piercing</h2>
+        <h2 class="center" title="armor piercing">armor piercing</h2>
         <div class="vert-line"></div>
-        <h2 title="lethality %">lethality %</h2>
+        <h2 class="center" title="lethality %">lethality %</h2>
         <div class="vert-line"></div>
-        <h2 title="kill radius">kill radius</h2>
+        <h2 class="center" title="kill radius">kill radius</h2>
         <div class="vert-line"></div>
-        <h2 title="ammo">ammo</h2>
+        <h2 class="center" title="ammo">ammo</h2>
         <div class="vert-line"></div>
       </div>
       <div class="repeating-container border-bottom">
         <fieldset class="repeating_weapons">
-          <div class="grid section-weapons"></div>
-          <div class="grid section-weapons">
+          <div class="grid section-weapons border-bottom">
             <label title="weapons input">
-              <input name="attr_weapons" placeholder="weapons" title="@{weapons}" type="text" value=""/>
+              <input name="attr_weapons" placeholder="weapons" title="@{repeating_weapons_${x}_weapons}" type="text" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="skill % input">
-              <input name="attr_skill_percent" placeholder="skill %" title="@{skill_percent}" type="text" value=""/>
+              <input name="attr_skill_percent" placeholder="skill %" title="@{repeating_weapons_${x}_skill_percent}" type="number" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="base range input">
-              <input name="attr_base_range" placeholder="base range" title="@{base_range}" type="text" value=""/>
+              <input name="attr_base_range" placeholder="base range" title="@{repeating_weapons_${x}_base_range}" type="text" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="damage input">
-              <input name="attr_damage" placeholder="damage" title="@{damage}" type="text" value=""/>
+              <input name="attr_damage" placeholder="damage" title="@{repeating_weapons_${x}_damage}" type="text" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="armor piercing input">
-              <input name="attr_armor_piercing" placeholder="armor piercing" title="@{armor_piercing}" type="text" value=""/>
+              <input name="attr_armor_piercing" placeholder="armor piercing" title="@{repeating_weapons_${x}_armor_piercing}" type="text" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="lethality % input">
-              <input name="attr_lethality_percent" placeholder="lethality %" title="@{lethality_percent}" type="text" value=""/>
+              <input name="attr_lethality_percent" placeholder="lethality %" title="@{repeating_weapons_${x}_lethality_percent}" type="number" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="kill radius input">
-              <input name="attr_kill_radius" placeholder="kill radius" title="@{kill_radius}" type="text" value=""/>
+              <input name="attr_kill_radius" placeholder="kill radius" title="@{repeating_weapons_${x}_kill_radius}" type="text" value=""/>
             </label>
             <div class="vert-line"></div>
-          </div>
-          <div class="grid section-weapons">
             <label title="ammo input">
-              <input name="attr_ammo" placeholder="ammo" title="@{ammo}" type="text" value=""/>
+              <input name="attr_ammo" placeholder="ammo" title="@{repeating_weapons_${x}_ammo}" type="number" value=""/>
             </label>
             <div class="vert-line"></div>
           </div>
@@ -960,9 +945,38 @@
   <!--REMARKS-->
   <div class="grid header-body remarks border">
     <div class="section-header">
-      <h1>equipment</h1>
+      <h1>remarks</h1>
     </div>
     <div class="grid section-body border">
+      <div class="section border-bottom">
+        <h2 class="aligned-left">17. personal details and notes</h2>
+        <textarea name="attr_personal_details_and_notes" placeholder="personal details and notes" title="@{personal_details_and_notes}"></textarea>
+      </div>
+      <div class="vert-line"></div>
+      <div class="section border-bottom">
+        <div class="section border-bottom">
+          <h2 class="aligned-left">18. developments which affect home and family</h2>
+          <textarea name="attr_developments_which_affect_home_and_family" placeholder="developments which affect home and family" title="@{developments_which_affect_home_and_family}"></textarea>
+        </div>
+        <div class="grid section-19 border-bottom">
+          <h2 class="aligned-left">19. special training</h2>
+          <div class="vert-line"></div>
+          <h2 class="aligned-left">skill or stat used</h2>
+        </div>
+        <div class="repeating-container border-bottom">
+          <fieldset class="repeating_special">
+            <div class="grid section-19 border-bottom">
+              <label title="special training input">
+                <input name="attr_special_training" placeholder="special training" title="@{repeating_weapons_${x}_special_training}" type="text" value=""/>
+              </label>
+              <div class="vert-line"></div>
+              <label title="special training input">
+                <input name="attr_skill_or_stat_used" placeholder="skill or stat used" title="@{repeating_weapons_${x}_skill_or_stat_used}" type="text" value=""/>
+              </label>
+            </div>
+          </fieldset>
+        </div>
+      </div>
       <div class="section-directions center"><span>Please indicate why this agent was recruited and why the agent agreed to be recruited.</span></div>
     </div>
   </div>
@@ -982,6 +996,8 @@
       </label>
     </div>
   </div>
+  <!--BOTTOM DECORATION-->
+  <div class="grid section-bottom-decor"><span class="uppercase">DD</span><span class="uppercase">united states form</span><span>315</span><span class="uppercase">top secret//orcon//special access required delta green agent documenation sheet <span name="attr_version"></span></span><span>112382</span></div>
 </div>
 <!--NOTES SHEET-->
 <!-- =============================-->
@@ -994,9 +1010,6 @@
     <option data-i18n="" value="npc">npc</option>
   </select>
 </div>
-<!--FOOTER-->
-<!-- =============================-->
-<footer><span>Version </span><span name="attr_version"></span></footer>
 <!--HIDDEN ATTRIBUTES-->
 <!-- =============================-->
 <!--ROLL TEMPLATE-->
@@ -1014,7 +1027,7 @@
 		const arrays = {
 			attributes: [""], 
 			repeating_settings: [""],
-			sheets: ["select", "page1", "page2"],
+			sheets: ["select"],
 			toggles: ["attributes"]
 		};
 
