add faktor for calculation AE/KE

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -243,19 +243,16 @@
 		<span data-i18n="maximal" >Maximal</span>
 		<input type="number" name='attr_le_max' class='short' value='0' readonly>
 		<span class='dee'></span>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_le_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Lebensenergie}} {{Probe=[[@{le_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
-
 		<span data-i18n="wundschwelle">Wundeschwelle</span>
 		<input type="number" name='attr_wundschwelle' class='short' value='0' readonly>
+		<br/>
 		<span data-i18n="schmerzstufen-1-2-3-4">Schmerzstufen 1/2/3/4</span>
 		<div class="tooltip"><input type="number" name='attr_schmerzstufe1' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 1</span></div>
 		<div class="tooltip"><input type="number" name='attr_schmerzstufe2' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 2</span></div>
 		<div class="tooltip"><input type="number" name='attr_schmerzstufe3' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 3</span></div>
 		<div class="tooltip"><input type="number" name='attr_schmerzstufe4' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 4</span></div>
 		<span class='dee'></span>
-
+		<br/>
 		<span data-i18n="grundwert">GW</span>
 		<input type="number" name='attr_le_grundwert' class='short' value='0'>
 		<span data-i18n="basis">Basis </span>
@@ -264,7 +261,10 @@
 		<input type="number" name='attr_le_modifikator' class='short' value='0'>
 		<span data-i18n="perm-verlust">Perm. Verlust</span>
 		<input type="number" name='attr_le_verlust_perm' class='short' value='0'>
-
+		<br/>
+		<span data-i18n="regeneration">Regeneration</span>
+		<input type="number" name='attr_le_regeneration' class='short' value='0'>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Lebensenergie}} {{Probe=[[@{le_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 	</div>
 		<br/>
 		<h3 data-i18n="astralenergie">Astralenergie</h3>
@@ -285,10 +285,9 @@
 			<option value="KO" data-i18n="KO">KO</option>
 			<option value="KK" data-i18n="KK">KK</option>
 		</select>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_ae_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Astralenergie}} {{Probe=[[@{ae_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
-
+		<span data-i18n="faktor">Faktor</span>
+		<input type="number" name='attr_ae_faktor' class='short' step="0.01" value='1.00'>
+		<br/>
 		<span  data-i18n="basis">Basis</span>
 		<input type="number" name='attr_ae_ausgangswert' class='short' value='0'>
 		<span data-i18n="bonus-malus">Bonus/Malus</span>
@@ -297,13 +296,15 @@
 		<input type="number" name='attr_ae_verlust_perm' class='short' value='0'>
 		<span  data-i18n="rueckkauf">Rückkauf</span>
 		<input type="number" name='attr_ae_rueckkauf' class='short' value='0'>
-		<span class='dee'></span>
-
+		<br/>
+		<span data-i18n="regeneration">Regeneration</span>
+		<input type="number" name='attr_ae_regeneration' class='short' value='0'>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Astralenergie}} {{Probe=[[@{ae_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 </div>
 
 		<br/>
 		<h3 data-i18n="karmaenergie">Karmaenergie</h3>
-<div class ="eigenschaft abgeleitete-eigenschaften2-grid">
+		<div class ="eigenschaft abgeleitete-eigenschaften2-grid">
 		<span  data-i18n="aktuell">Aktuell</span>
 		<input type="number" name='attr_ke' class='short' value='0'>
 		<span  data-i18n="maximal">Maximal</span>
@@ -320,9 +321,9 @@
 			<option value="KO" data-i18n="KO">KO</option>
 			<option value="KK" data-i18n="KK">KK</option>
 		</select>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_ke_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Karmaenergie}} {{Probe=[[@{ke_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
+		<span data-i18n="faktor">Faktor</span>
+		<input type="number" name='attr_ke_faktor' class='short' step="0.01" value='1.00'>
+		<br/>
 		<span  data-i18n="basis">Basis</span>
 		<input type="number" name='attr_ke_ausgangswert' class='short' value='0'>
 		<span data-i18n="bonus-malus">Bonus/Malus</span>
@@ -331,7 +332,10 @@
 		<input type="number" name='attr_ke_verlust_perm' class='short' value='0'>
 		<span  data-i18n="rueckkauf">Rückkauf</span>
 		<input type="number" name='attr_ke_rueckkauf' class='short' value='0'>
-		<span class='dee'></span>
+		<br/>
+		<span data-i18n="regeneration">Regeneration</span>
+		<input type="number" name='attr_ke_regeneration' class='short' value='0'>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Karmaenergie}} {{Probe=[[@{ke_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 </div>
 
 <br/>
@@ -7072,9 +7076,9 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 	});
 
 
-	on("sheet:opened change:leiteigenschaft_ae change:mut_gesamt change:klugheit_gesamt change:charisma_gesamt change:intuition_gesamt change:fingerfertigkeit_gesamt change:gewandheit_gesamt change:konstitution_gesamt change koerperkraft_gesamt change:ae_ausgangswert change:ae_modifikator change:ae_verlust_perm change:ae_rueckkauf", function(){
+	on("sheet:opened change:leiteigenschaft_ae change:mut_gesamt change:klugheit_gesamt change:charisma_gesamt change:intuition_gesamt change:fingerfertigkeit_gesamt change:gewandheit_gesamt change:konstitution_gesamt change koerperkraft_gesamt change:ae_ausgangswert change:ae_modifikator change:ae_verlust_perm change:ae_rueckkauf change:ae_faktor", function(){
 	//init and change astralenergie
-	getAttrs(["leiteigenschaft_ae", "mut_gesamt", "klugheit_gesamt", "charisma_gesamt", "intuition_gesamt", "fingerfertigkeit_gesamt", "gewandheit_gesamt", "konstitution_gesamt", "koerperkraft_gesamt", "ae_modifikator", "ae_verlust_perm", "ae_rueckkauf", "ae", "ae_regeneration"], function(v){
+	getAttrs(["leiteigenschaft_ae", "mut_gesamt", "klugheit_gesamt", "charisma_gesamt", "intuition_gesamt", "fingerfertigkeit_gesamt", "gewandheit_gesamt", "konstitution_gesamt", "koerperkraft_gesamt", "ae_modifikator", "ae_verlust_perm", "ae_rueckkauf", "ae", "ae_regeneration", "ae_faktor"], function(v){
 	  var leiteigenschaft_ae = v.leiteigenschaft_ae;
 	  var mut_gesamt = parseInt(v.mut_gesamt) || 0;
 	  var klugheit_gesamt = parseInt(v.klugheit_gesamt) || 0;
@@ -7089,31 +7093,32 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 	  var ae_rueckkauf = parseInt(v.ae_rueckkauf) || 0;
 		var ae = parseInt(v.ae) ||0;
 	  var ae_regeneration = parseInt(v.ae_regeneration) ||0;
+		var ae_faktor = parseFloat(v.ae_faktor) || 1;
 
 	  switch (leiteigenschaft_ae) {
 	   case "MU":
-	       var ae_ausgangswert = 20 + mut_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(mut_gesamt * ae_faktor);
 	       break;
 	   case "KL":
-	       var ae_ausgangswert = 20 + klugheit_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(klugheit_gesamt * ae_faktor);
 	       break;
 	   case "IN":
-	       var ae_ausgangswert = 20 + intuition_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(intuition_gesamt * ae_faktor);
 	       break;
 	   case "CH":
-	       var ae_ausgangswert = 20 + charisma_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(charisma_gesamt * ae_faktor);
 	       break;
 	    case "FF":
-	       var ae_ausgangswert = 20 + fingerfertigkeit_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(fingerfertigkeit_gesamt * ae_faktor);
 	       break;
 	    case "GE":
-	       var ae_ausgangswert = 20 + gewandheit_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(gewandheit_gesamt * ae_faktor);
 	       break;
 	    case "KO":
-	       var ae_ausgangswert = 20 + konstitution_gesamt;
+	       var ae_ausgangswert = 20 + Math.ceil(konstitution_gesamt * ae_faktor);
 	       break;
 	    case "KK":
-	        var ae_ausgangswert = 20 + koerperkraft_gesamt;
+	        var ae_ausgangswert = 20 + Math.ceil(koerperkraft_gesamt * ae_faktor);
 	        break;
 	     case "---":
 	     default:
@@ -7135,9 +7140,9 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 			});
 	});
 
-	on("sheet:opened change:leiteigenschaft_ke change:mut_gesamt change:klugheit_gesamt change:charisma_gesamt change:intuition_gesamt change:fingerfertigkeit_gesamt change:gewandheit_gesamt change:konstitution_gesamt change koerperkraft_gesamt change:ke_ausgangswert change:ke_modifikator change:ke_verlust_perm change:ke_rueckkauf", function(){
+	on("sheet:opened change:leiteigenschaft_ke change:mut_gesamt change:klugheit_gesamt change:charisma_gesamt change:intuition_gesamt change:fingerfertigkeit_gesamt change:gewandheit_gesamt change:konstitution_gesamt change koerperkraft_gesamt change:ke_ausgangswert change:ke_modifikator change:ke_verlust_perm change:ke_rueckkauf change:ke_faktor", function(){
 	//init and change astralenerige
-	getAttrs(["leiteigenschaft_ke", "mut_gesamt", "klugheit_gesamt", "charisma_gesamt", "intuition_gesamt", "fingerfertigkeit_gesamt", "gewandheit_gesamt", "konstitution_gesamt", "koerperkraft_gesamt", "ke_modifikator", "ke_verlust_perm", "ke_rueckkauf",  "ke", "ke_regeneration"], function(v){
+	getAttrs(["leiteigenschaft_ke", "mut_gesamt", "klugheit_gesamt", "charisma_gesamt", "intuition_gesamt", "fingerfertigkeit_gesamt", "gewandheit_gesamt", "konstitution_gesamt", "koerperkraft_gesamt", "ke_modifikator", "ke_verlust_perm", "ke_rueckkauf",  "ke", "ke_regeneration", "ke_faktor"], function(v){
 	  var leiteigenschaft_ke = v.leiteigenschaft_ke;
 	  var mut_gesamt = parseInt(v.mut_gesamt) || 0;
 	  var klugheit_gesamt = parseInt(v.klugheit_gesamt) || 0;
@@ -7152,31 +7157,32 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 	  var ke_rueckkauf = parseInt(v.ke_rueckkauf) || 0;
 	  var ke = parseInt(v.ke) ||0;
 	  var ke_regeneration = parseInt(v.ke_regeneration) ||0;
+		var ke_faktor = parseFloat(v.ke_faktor) || 1;
 
 	  switch (leiteigenschaft_ke) {
 	   case "MU":
-	       var ke_ausgangswert = 20 + mut_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(mut_gesamt * ke_faktor);
 	       break;
 	   case "KL":
-	       var ke_ausgangswert = 20 + klugheit_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(klugheit_gesamt * ke_faktor);
 	       break;
 	   case "IN":
-	       var ke_ausgangswert = 20 + intuition_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(intuition_gesamt * ke_faktor);
 	       break;
 	   case "CH":
-	       var ke_ausgangswert = 20 + charisma_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(charisma_gesamt * ke_faktor);
 	       break;
 	    case "FF":
-	       var ke_ausgangswert = 20 + fingerfertigkeit_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(fingerfertigkeit_gesamt * ke_faktor);
 	       break;
 	    case "GE":
-	       var ke_ausgangswert = 20 + gewandheit_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(gewandheit_gesamt * ke_faktor);
 	       break;
 	    case "KO":
-	       var ke_ausgangswert = 20 + konstitution_gesamt;
+	       var ke_ausgangswert = 20 + Math.ceil(konstitution_gesamt * ke_faktor);
 	       break;
 	    case "KK":
-	        var ke_ausgangswert = 20 + koerperkraft_gesamt;
+	        var ke_ausgangswert = 20 + Math.ceil(koerperkraft_gesamt * ke_faktor);
 	        break;
 	     case "---":
 	     default:
