--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -979,8 +979,10 @@
 	// === ATTRIBUTE ARRAYS
 		const arrays = {
 			stats: ['strength', 'constitution', 'dexterity', 'intelligence', 'power', 'charisma'],
-			attributes: {'willpower_points': ['power'], 'sanity_points': ['power'], 'breaking_point': ['sanity', 'power']},
 			hit_points: ['strength', 'constitution'],
+			sanity_points: ['power'],
+			breaking_point: ['sanity', 'power'],
+			willpower_points: ['power'],
 			repeating_settings: [''],
 			sheets: ['settings'],
 			toggles: ['sheet']
