fixed display issues on tab Grundwerte

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -236,45 +236,41 @@
 	<br/>
 	<h3 data-i18n="lebensenergie">Lebensenergie</h3>
 
-	<div class ="abgeleitete-eigenschaften-grid">
+<div class ="grundwerte-le-grid">
+		<span data-i18n="aktuell" class='grid-le1'>Aktuell</span>
+		<input type="number" name='attr_le' class='grid-le2' value='0'>
+		<span data-i18n="maximal" class='grid-le3' >Maximal</span>
+		<input type="number" name='attr_le_max' class='grid-le4' value='0' readonly>
+		<span data-i18n="regeneration" class='grid-le5'>Regeneration</span>
+		<input type="number" name='attr_le_regeneration' class='grid-le6' value='0'>
+		<button class="default grid-le7" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Lebensenergie}} {{Probe=[[@{le_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
+		<span data-i18n="grundwert" class='grid-le8'>GW</span>
+		<input type="number" name='attr_le_grundwert' class='grid-le9' value='0'>
+		<span data-i18n="basis" class='grid-le10'>Basis </span>
+		<input type="number" name='attr_le_ausgangswert' class='grid-le11' value='0'>
+		<span data-i18n="bonus-malus" class='grid-le12'>Bonus/Malus</span>
+		<input type="number" name='attr_le_modifikator' class='grid-le13' value='0'>
+		<span data-i18n="perm-verlust" class='grid-le14'>Perm. Verlust</span>
+		<input type="number" name='attr_le_verlust_perm' class='grid-le15' value='0'>
+		<span data-i18n="schmerzstufen-1-2-3-4" class='grid-le16'>Schmerzstufen 1/2/3/4</span>
+		<div class="tooltip grid-le17"><input type="number" name='attr_schmerzstufe1' class='grid-le17' value='0' readonly><span class="tooltiptext">Schmerzstufe 1</span></div>
+		<div class="tooltip grid-le18"><input type="number" name='attr_schmerzstufe2' class='grid-le18' value='0' readonly><span class="tooltiptext">Schmerzstufe 2</span></div>
+		<div class="tooltip grid-le19"><input type="number" name='attr_schmerzstufe3' class='grid-le19' value='0' readonly><span class="tooltiptext">Schmerzstufe 3</span></div>
+		<div class="tooltip grid-le20"><input type="number" name='attr_schmerzstufe4' class='grid-le20' value='0' readonly><span class="tooltiptext">Schmerzstufe 4</span></div>
+		<span data-i18n="wundschwelle" class='grid-le21'>Wundeschwelle</span>
+		<input type="number" name='attr_wundschwelle' class='grid-le22' value='0' readonly>
+</div>
 
-		<span data-i18n="aktuell">Aktuell</span>
-		<input type="number" name='attr_le' class='short' value='0'>
-		<span data-i18n="maximal" >Maximal</span>
-		<input type="number" name='attr_le_max' class='short' value='0' readonly>
-		<span class='dee'></span>
-		<span data-i18n="wundschwelle">Wundeschwelle</span>
-		<input type="number" name='attr_wundschwelle' class='short' value='0' readonly>
-		<br/>
-		<span data-i18n="schmerzstufen-1-2-3-4">Schmerzstufen 1/2/3/4</span>
-		<div class="tooltip"><input type="number" name='attr_schmerzstufe1' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 1</span></div>
-		<div class="tooltip"><input type="number" name='attr_schmerzstufe2' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 2</span></div>
-		<div class="tooltip"><input type="number" name='attr_schmerzstufe3' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 3</span></div>
-		<div class="tooltip"><input type="number" name='attr_schmerzstufe4' class='short' value='0' readonly><span class="tooltiptext">Schmerzstufe 4</span></div>
-		<span class='dee'></span>
-		<br/>
-		<span data-i18n="grundwert">GW</span>
-		<input type="number" name='attr_le_grundwert' class='short' value='0'>
-		<span data-i18n="basis">Basis </span>
-		<input type="number" name='attr_le_ausgangswert' class='short' value='0'>
-		<span data-i18n="bonus-malus">Bonus/Malus</span>
-		<input type="number" name='attr_le_modifikator' class='short' value='0'>
-		<span data-i18n="perm-verlust">Perm. Verlust</span>
-		<input type="number" name='attr_le_verlust_perm' class='short' value='0'>
-		<br/>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_le_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Lebensenergie}} {{Probe=[[@{le_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
-	</div>
+
 		<br/>
 		<h3 data-i18n="astralenergie">Astralenergie</h3>
-<div class ="eigenschaft abgeleitete-eigenschaften2-grid">
-	<span  data-i18n="aktuell">Aktuell</span>
-	<input type="number" name='attr_ae' class='short' value='0'>
-	<span  data-i18n="maximal">Maximal</span>
-	<input type="number" name='attr_ae_max' class='short' value='0' readonly>
-	<span data-i18n="leiteigenschaft">Leiteigenschaft</span>
-		<select name="attr_leiteigenschaft_ae" style="width: 4em;" >
+<div class ="eigenschaft grundwerte-ae-grid">
+	<span  data-i18n="aktuell" class='grid-ae1'>Aktuell</span>
+	<input type="number" name='attr_ae' class='grid-ae2' value='0'>
+	<span  data-i18n="maximal" class='grid-ae3'>Maximal</span>
+	<input type="number" name='attr_ae_max'  class='grid-ae4' value='0' readonly>
+	<span data-i18n="leiteigenschaft" class='grid-ae5'>Leiteigenschaft</span>
+		<select name="attr_leiteigenschaft_ae"  class='eigenschaft grid-ae6' style="" >
 			<option selected>---</option>
 			<option value="MU" data-i18n="MU">MU</option>
 			<option value="KL" data-i18n="KL">KL</option>
@@ -285,32 +281,30 @@
 			<option value="KO" data-i18n="KO">KO</option>
 			<option value="KK" data-i18n="KK">KK</option>
 		</select>
-		<span data-i18n="faktor">Faktor</span>
-		<input type="number" name='attr_ae_faktor' class='short' step="0.01" value='1.00'>
-		<br/>
-		<span  data-i18n="basis">Basis</span>
-		<input type="number" name='attr_ae_ausgangswert' class='short' value='0'>
-		<span data-i18n="bonus-malus">Bonus/Malus</span>
-		<input type="number" name='attr_ae_modifikator' class='short' value='0'>
-		<span data-i18n="perm-verlust">Perm. Verlust</span>
-		<input type="number" name='attr_ae_verlust_perm' class='short' value='0'>
-		<span  data-i18n="rueckkauf">Rückkauf</span>
-		<input type="number" name='attr_ae_rueckkauf' class='short' value='0'>
-		<br/>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_ae_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Astralenergie}} {{Probe=[[@{ae_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
+		<span data-i18n="faktor" class='grid-ae7'>Faktor</span>
+		<input type="number" name='attr_ae_faktor'  class='grid-ae8' step="0.01" value='1.00'>
+		<span  data-i18n="basis" class='grid-ae9'>Basis</span>
+		<input type="number" name='attr_ae_ausgangswert'  class='grid-ae10' value='0'>
+		<span data-i18n="bonus-malus" class='grid-ae11'>Bonus/Malus</span>
+		<input type="number" name='attr_ae_modifikator'  class='grid-ae12' value='0'>
+		<span data-i18n="perm-verlust" class='grid-ae13'>Perm. Verlust</span>
+		<input type="number" name='attr_ae_verlust_perm'  class='grid-ae14' value='0'>
+		<span  data-i18n="rueckkauf" class='grid-ae15'>Rückkauf</span>
+		<input type="number" name='attr_ae_rueckkauf'  class='grid-ae16' value='0'>
+		<span data-i18n="regeneration" class='grid-ae17'>Regeneration</span>
+		<input type="number" name='attr_ae_regeneration' class='grid-ae18' value='0'>
+		<button class="default grid-ae19" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Astralenergie}} {{Probe=[[@{ae_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 </div>
 
 		<br/>
 		<h3 data-i18n="karmaenergie">Karmaenergie</h3>
-		<div class ="eigenschaft abgeleitete-eigenschaften2-grid">
-		<span  data-i18n="aktuell">Aktuell</span>
-		<input type="number" name='attr_ke' class='short' value='0'>
-		<span  data-i18n="maximal">Maximal</span>
-		<input type="number" name='attr_ke_max' class='short' value='0' readonly>
-		<span data-i18n="leiteigenschaft">Leiteigenschaft</span>
-		<select name="attr_leiteigenschaft_ke" class="eigenschaft" style="width: 4em;">
+		<div class="eigenschaft grundwerte-ke-grid">
+		<span  data-i18n="aktuell" class='grid-ke1'>Aktuell</span>
+		<input type="number" name='attr_ke' class='grid-ke2' value='0'>
+		<span  data-i18n="maximal" class='grid-ke3'>Maximal</span>
+		<input type="number" name='attr_ke_max' class='grid-ke4' value='0' readonly>
+		<span data-i18n="leiteigenschaft" class='grid-ke5'>Leiteigenschaft</span>
+		<select name="attr_leiteigenschaft_ke" class="eigenschaft grid-ke6" >
 			<option selected>---</option>
 			<option value="MU" data-i18n="MU">MU</option>
 			<option value="KL" data-i18n="KL">KL</option>
@@ -321,21 +315,19 @@
 			<option value="KO" data-i18n="KO">KO</option>
 			<option value="KK" data-i18n="KK">KK</option>
 		</select>
-		<span data-i18n="faktor">Faktor</span>
-		<input type="number" name='attr_ke_faktor' class='short' step="0.01" value='1.00'>
-		<br/>
-		<span  data-i18n="basis">Basis</span>
-		<input type="number" name='attr_ke_ausgangswert' class='short' value='0'>
-		<span data-i18n="bonus-malus">Bonus/Malus</span>
-		<input type="number" name='attr_ke_modifikator' class='short' value='0'>
-		<span data-i18n="perm-verlust">Perm. Verlust</span>
-		<input type="number" name='attr_ke_verlust_perm' class='short' value='0'>
-		<span  data-i18n="rueckkauf">Rückkauf</span>
-		<input type="number" name='attr_ke_rueckkauf' class='short' value='0'>
-		<br/>
-		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_ke_regeneration' class='short' value='0'>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Karmaenergie}} {{Probe=[[@{ke_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
+		<span data-i18n="faktor" class='grid-ke7'>Faktor</span>
+		<input type="number" name='attr_ke_faktor'  class='grid-ke8' step="0.01" value='1.00'>
+		<span  data-i18n="basis" class='grid-ke9'>Basis</span>
+		<input type="number" name='attr_ke_ausgangswert'  class='grid-ke10' value='0'>
+		<span data-i18n="bonus-malus" class='grid-ke11'>Bonus/Malus</span>
+		<input type="number" name='attr_ke_modifikator' class='grid-ke12' value='0'>
+		<span data-i18n="perm-verlust" class='grid-ke13'>Perm. Verlust</span>
+		<input type="number" name='attr_ke_verlust_perm' class='grid-ke14' value='0'>
+		<span  data-i18n="rueckkauf" class='grid-ke15'>Rückkauf</span>
+		<input type="number" name='attr_ke_rueckkauf'  class='grid-ke16' value='0'>
+		<span data-i18n="regeneration" class='grid-ke17'>Regeneration</span>
+		<input type="number" name='attr_ke_regeneration' class='grid-ke18' value='0'>
+		<button class="default grid-ke19" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Karmaenergie}} {{Probe=[[@{ke_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 </div>
 
 <br/>
