[update] Fix for history + option

--- a/Eclipse Phase V2/Eclipse Phase V2.html
+++ b/Eclipse Phase V2/Eclipse Phase V2.html
@@ -105,8 +105,8 @@
 	<label>
 		<span data-i18n="public roll ?">Public roll ?</span>
 		<select name="attr_gm">
-			<option value="" data-i18n="no" selected>No</option>
-			<option value="/w gm" data-i18n="yes">Yes</option>
+			<option value="/w gm" data-i18n="no" selected>No</option>
+			<option value=" " data-i18n="yes">Yes</option>
 		</select>
 	</label>
 	<label>
